--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": ["standard", "plugin:prettier/recommended"],
   "plugins": ["flowtype"],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "rules": {
     "flowtype/define-flow-type": 1,
     "flowtype/require-parameter-type": 1,
@@ -17,7 +17,8 @@
     "flowtype/type-id-match": [1, "^([A-Z][a-z0-9]+)+Type$"],
     "flowtype/use-flow-type": 1,
     "flowtype/valid-syntax": 1,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "prettier/prettier": ["error", { "endOfLine": "auto" }]
   },
   "settings": {
     "flowtype": {
