--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "postcss-critical-css",
+  "name": "@veritashealth/postcss-critical-css",
   "version": "3.0.7",
   "description": "Generate critical CSS using PostCSS",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/zgreen/postcss-critical-css"
+    "url": "https://github.com/veritashealth/postcss-critical-css"
   },
   "keywords": [
     "postcss-plugin",
-    "postcss plugin",
     "postcss",
     "critical-css",
     "critical",
@@ -19,36 +18,44 @@
   "author": "Zach Green",
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.13.2",
-    "eslint": "^3.3.1",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-flowtype": "^2.50.3",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^4.2.3",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "flow-bin": "^0.100.0",
-    "husky": "^3.1.0",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-flow": "^7.18.6",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "chalk": "^4.0.0",
+    "cssnano": "^5.1.15",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "flow-bin": "^0.105.0",
+    "fs-extra": "^11.1.0",
+    "husky": "^8.0.3",
     "lint-staged": "^9.5.0",
-    "minimist": "^1.2.5",
-    "prettier": "1.19.1",
-    "standard-version": "^7.1.0",
-    "tape": "^4.13.3"
+    "minimist": "^0.2.4",
+    "postcss": "^8.4.21",
+    "postcss-reporter": "^7.0.5",
+    "prettier": "^2.8.4",
+    "standard-version": "^9.5.0",
+    "tape": "^5.6.3"
+  },
+  "peerDependencies": {
+    "postcss": "^8.4.21"
   },
   "scripts": {
     "build": "eslint src/** && npm run flow && babel src --out-dir dist",
     "example": "./node_modules/.bin/babel-node example/example.js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "eslint": "eslint test/**/*.js && eslint src/**",
-    "format": "prettier --write \"**/*.{js,md,yml,.babelrc,.eslintrc}\"",
+    "format": "prettier --write \"**/*.{js,md,yml,.eslintrc}\"",
     "prerelease": "npm run build && npm test",
     "pretest": "./node_modules/.bin/babel-node test/preTest.js",
     "release": "standard-version",
@@ -59,12 +66,6 @@
     "test-default": "npm run pretest && tape test",
     "test-no-preserve": "npm run pretest -- --fixtures-dir=fixtures-no-preserve --preserve=false && tape test --fixtures-dir=fixtures-no-preserve --preserve=false",
     "test-output-path": "npm run pretest -- --outputPath='test/fixtures-output-path' && tape test --outputPath='test/fixtures-output-path' --test=default"
-  },
-  "dependencies": {
-    "chalk": "^1.1.3",
-    "cssnano": "^4.1.10",
-    "fs-extra": "^8.1.0",
-    "postcss": "^7.0.35"
   },
   "husky": {
     "hooks": {
