--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "postcss": "^8.4.21",
     "postcss-reporter": "^7.0.5",
     "prettier": "^2.8.4",
+    "process": "^0.11.10",
     "standard-version": "^9.5.0",
     "tape": "^5.6.3"
   },
