--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/veritashealth/postcss-critical-css"
+    "url": "https://github.com/veritashealth/postcss-critical-css.git"
   },
   "keywords": [
     "postcss-plugin",
